# claude-agent

./: .env.example  .gitignore  README.md  agent.env.json.example  config.json.example  prompt.txt  proto.html  prototype.html  pyproject.toml  server.py  store.py
docs/: frontend-spec.md
docs/superpowers/plans/: 2026-06-24-frontend-optimization.md  2026-06-25-logging.md
docs/superpowers/specs/: 2026-06-24-frontend-optimization-design.md  2026-06-25-logging-design.md
scenarios/: code_qa.md  troubleshoot.md
static/: index.html
static/js/: api.js  main.js  render.js  scenarios.js  sessions.js  ui.js  util.js
static/styles/: app.css
tests/js/: api.test.mjs  scenarios.test.mjs  util.test.mjs
