[project]
name = "code-qa-service"
version = "1.0.0"
description = "基于 Claude Agent SDK 的代码问答 HTTP 服务"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # 注意:旧包名 claude-code-sdk 已废弃,类名 ClaudeCodeOptions 已改为 ClaudeAgentOptions
    "claude-agent-sdk>=0.1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10",
]

# 可选:安装后可直接用 `code-qa` 启动
[project.scripts]
code-qa = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# 该项目是单文件服务,把 server.py 作为顶层模块打包
only-include = ["server.py"]
